gccida/g0/mark_set_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:54: error: must use 'enum' tag to refer to type 'rtx_code'
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                     ^
                                                     enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2984:4: error: expected ';' after expression
rtx rega; // [rsp+18h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2984:5: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rtx rega; // [rsp+18h] [rbp-68h] 
    ^~~~
    reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2987:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outer_mode; // [rsp+44h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2988:4: error: expected ';' after expression
rtx y; // [rsp+48h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2988:5: error: use of undeclared identifier 'y'
rtx y; // [rsp+48h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3002:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = reg; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3014:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = rega->fld[0].rtx; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3014:8: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = rega->fld[0].rtx; 
       ^~~~
       reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3015:20: error: use of undeclared identifier 'rega'
while ( *( _WORD *)rega == 63 ); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3017:20: error: use of undeclared identifier 'rega'
while ( *( _WORD *)rega == 133 || *( _WORD *)rega == 132 || *( _WORD *)rega == 64 ); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3017:46: error: use of undeclared identifier 'rega'
while ( *( _WORD *)rega == 133 || *( _WORD *)rega == 132 || *( _WORD *)rega == 64 ); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3017:72: error: use of undeclared identifier 'rega'
while ( *( _WORD *)rega == 133 || *( _WORD *)rega == 132 || *( _WORD *)rega == 64 ); 
                                                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3018:17: error: use of undeclared identifier 'rega'
if ( *( _WORD *)rega == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3020:41: error: use of undeclared identifier 'rega'; did you mean 'reg'?
not_dead = bitmap_bit_p( pbi->reg_live, rega->fld[0].rtint); 
                                        ^~~~
                                        reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3055:1: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = rega->fld[0].rtx; 
^~~~
reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3055:8: error: use of undeclared identifier 'rega'; did you mean 'reg'?
rega = rega->fld[0].rtx; 
       ^~~~
       reg
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:2962:73: note: 'reg' declared here
void  mark_set_1(  struct propagate_block_info *pbi, rtx_code code, rtx reg, rtx cond, rtx insn, int flags) 
                                                                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3061:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( reg->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/flow.c:3097:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[outer_mode] == MODE_COMPLEX_INT || mode_class_0[outer_mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_set_1/src/obj/flow.o] Error 1
